# autoinfo

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debian  Dockerfile.rpi  LICENSE  README.md  build.sh  docker-build-rpi.ps1  docker-build-rpi.sh  docker-build.ps1  docker-build.sh  format.sh
.github/: copilot-instructions.md
.github/workflows/: build-rpi.yml  build.yml  qmllint.yml  release.yml  translations.yml
assets/icons/: icons.qrc
assets/qml/: BluetoothView.qml  ConfigItemView.qml  ConfigPageView.qml  ConfigScreen.qml  ConfigView.qml  ExtensionManagerView.qml  GlobalShortcutHandler.qml  Main.qml  ShortcutsHelpOverlay.qml  StyledButton.qml  Theme.qml  ThemeDemo.qml  TranslationDiagnostics.qml  qmldir
assets/themes/: dark.json  light.json
cmake/: Translations.cmake
config/: crankshaft.conf  crankshaft.json  navigation_favourites.json  navigation_settings.json
docs/: CONTRIBUTING.md  capabilities_architecture.md  extension_development.md  extension_domains_and_config_ui.md  extension_ui_integration_options.md  geocoding_provider_system.md  icon_system.md  media_player_extension.md  navigation_destination_search.md  project_structure.md  qml_development_guide.md  ui_theme_implementation_summary.md  ui_theme_system.md  weblate_configuration.md  wireless_extension_implementation.md  wsl2_dev_setup.md
docs/fix_summaries/: bluetooth_capability_addition.md  capabilities_stub_implementation.md  deb_packaging_trixie_update.md  dialer_bluetooth_event_bridge.md  dialer_extension.md  extension_enable_disable_toggle.md  extension_loading_fix.md  extensions_packaging_alignment.md  first_run_general_settings.md  i18n_framework_implementation.md  mdi_icon_registry.md  media_player_gstreamer_implementation.md  navigation_settings_migration.md  qt_location_plugin_install.md  rpi_artifact_path_fix.md  rpi_pic_link_fix.md  rpi_xkb_quick_fix.md  shortcuts_help_overlay.md  ui_settings_tab_fix_summary.md
docs/troubleshooting/: blank_screen_ui.md  ci_code_quality_debug.md
extensions/: CMakeLists.txt
extensions/bluetooth/: CMakeLists.txt  bluetooth_extension.cpp  bluetooth_extension.hpp  manifest.json  resources.qrc
extensions/bluetooth/assets/: BluetoothView.qml
extensions/dialer/: CMakeLists.txt  dialer_extension.cpp  dialer_extension.hpp  manifest.json  resources.qrc
extensions/dialer/qml/: DialerView.qml
extensions/media_player/: CMakeLists.txt  GStreamerEngine.cpp  GStreamerEngine.hpp  IMediaEngine.hpp  README.md  manifest.json  media_player_extension.cpp  media_player_extension.hpp
extensions/navigation/: CMakeLists.txt  GeocodingProvider.hpp  GeocodingProviderFactory.cpp  GeocodingProviderFactory.hpp  NominatimProvider.cpp  NominatimProvider.hpp  OSRMProvider.cpp  OSRMProvider.hpp  ProviderTemplate.hpp  RoutingProvider.hpp  manifest.json  navigation_extension.cpp  navigation_extension.hpp  resources.qrc
extensions/navigation/qml/: CoordinateInput.qml  DestinationSearch.qml  FavouritesList.qml  GeocodingSearch.qml  NavigationView.qml  NavigationView.qml.backup  qmldir
extensions/wireless/: CMakeLists.txt  manifest.json  resources.qrc  wireless_extension.cpp  wireless_extension.hpp
extensions/wireless/assets/: WirelessView.qml
i18n/: core_en_GB.ts
scripts/: build.ps1  build.sh  check_braces.py  dump_brace_counts.py  find_brace_max.py  find_unclosed_from_end.py  install_dev_tools.sh  lint_cpp.sh  run_qmllint.sh  unmatched_braces.py  update_mdi_icons.py  update_translations.sh  wsl2-dev-setup.sh
src/: main.cpp
src/core/: CMakeLists.txt  CapabilityManager.cpp  CapabilityManager.hpp  application.cpp  application.hpp  event_bus.cpp  event_bus.hpp  websocket_server.cpp  websocket_server.hpp
src/core/application/: application.cpp  application.hpp
src/core/capabilities/: AudioCapability.hpp  AudioCapabilityImpl.cpp  AudioCapabilityImpl.hpp  BluetoothCapability.cpp  BluetoothCapability.hpp  Capability.hpp  CapabilityManager.cpp  CapabilityManager.hpp  EventCapability.hpp  EventCapabilityImpl.cpp  EventCapabilityImpl.hpp  FileSystemCapability.hpp  FileSystemCapabilityImpl.cpp  FileSystemCapabilityImpl.hpp  LocationCapability.hpp  LocationCapabilityImpl.cpp  LocationCapabilityImpl.hpp  NetworkCapability.hpp  NetworkCapabilityImpl.cpp  NetworkCapabilityImpl.hpp  TokenCapabilityImpl.cpp  TokenCapabilityImpl.hpp  UICapability.hpp  UICapabilityImpl.cpp  UICapabilityImpl.hpp  VideoCapability.hpp  WirelessCapability.hpp  WirelessCapabilityImpl.cpp  WirelessCapabilityImpl.hpp
src/core/config/: ConfigManager.cpp  ConfigManager.hpp  ConfigTypes.cpp  ConfigTypes.hpp
src/core/events/: event_bus.cpp  event_bus.hpp
src/core/network/: websocket_server.cpp  websocket_server.hpp
src/core/ui/: UIRegistrar.hpp
src/extensions/: CMakeLists.txt  extension.hpp  extension_manager.cpp  extension_manager.hpp  extension_manifest.cpp  extension_manifest.hpp
src/ui/: BluetoothBridge.cpp  BluetoothBridge.hpp  CMakeLists.txt  ConfigManagerBridge.cpp  ConfigManagerBridge.hpp  EventBridge.cpp  EventBridge.hpp  ExtensionManagerBridge.cpp  ExtensionManagerBridge.hpp  ExtensionRegistry.cpp  ExtensionRegistry.hpp  I18nManager.cpp  I18nManager.hpp  IconRegistry.cpp  IconRegistry.hpp  NavigationBridge.cpp  NavigationBridge.hpp  Theme.cpp  Theme.hpp  ThemeManager.cpp  ThemeManager.hpp  UIRegistrarImpl.cpp  UIRegistrarImpl.hpp  WirelessBridge.cpp  WirelessBridge.hpp
tests/: CMakeLists.txt
tests/integration/: test_config_manager.cpp  test_media_public_controls.cpp
tests/unit/: test_capability_manager.cpp  test_event_bus.cpp  test_extension_dependencies.cpp  test_extension_manager.cpp
tools/qml-stubs/: BluetoothBridge.qml  ConfigManagerBridge.qml  StyledButton.qml  Theme.qml  ThemeManager.qml  WirelessBridge.qml  qmldir
tools/qml-stubs/Crankshaft.BluetoothBridge/: BluetoothBridge.qml  qmldir
tools/qml-stubs/Crankshaft.ConfigManagerBridge/: ConfigManagerBridge.qml  qmldir
tools/qml-stubs/Crankshaft.WirelessBridge/: WirelessBridge.qml  qmldir
tools/qml-stubs/CrankshaftReborn.UI/: IconRegistry.qml  qmldir  (+2 more)
(+25 files in other folders)
